--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
     image: postgres:15
     container_name: postgres_db
     environment:
-      POSTGRES_USER: ${PSQLUSER}
-      POSTGRES_PASSWORD: ${PSQLPASSWORD}
-      POSTGRES_DB: ${PSQLDB}
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "postgres"
     ports:
       - "5432:5432"
     healthcheck:
